Cleanup and refactor, fix linebreaks in Verification details
Do not rely on manipulating Observers directly but rather pass a reference as prop or as it is necessary. Clean up code (still some housekeeping left). 
Need to clean up when the Verification History is empty.

--- a/src/WorkItemFormGroup/MasterDetail.Example.css
+++ b/src/WorkItemFormGroup/MasterDetail.Example.css
@@ -4,7 +4,7 @@
 }
 
 .master-example-row-content {
-    padding: 8px 8px 8px 20px;
+    padding: 5px 5px 5px 20px;
 }
 
 .master-example-scroll-container {
@@ -44,4 +44,8 @@
 
 .context-details {
     flex-grow: 100;
+}
+
+.card-body-description {
+    display: block;
 }
